--- a/index.html
+++ b/index.html
@@ -1,3 +1,121 @@
-<link rel="stylesheet" href="./style.css">
-<canvas></canvas>
-<script src="./index.js"></script>
+<link rel="shortcut icon" href="img/icon.png">
+<link rel="stylesheet" href="style.css">
+
+<title>Space Invaders</title>
+<style>
+    body {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: linear-gradient(grey, black);
+        font-family: sans-serif;
+        font-size: 14px;
+    }
+</style>
+
+<div style="position: relative" id="parentDiv">
+    <p id="scoreContainer" style="
+        position: absolute;
+        z-index: 10;
+        color: yellow;
+        left: 10px;
+        top: 10px;
+        margin: 0;
+        display: none;
+      ">
+        <span>Score:</span> <span id="scoreEl">0</span>
+    </p>
+    <canvas></canvas>
+    <!-- background container -->
+    <div id="startScreen" style="
+        position: absolute;
+        top: 20;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: url('./img/startScreenBackground.png');
+        z-index: 20;
+        background-size: contain;
+        background-repeat: no-repeat;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      ">
+        <div style="
+        text-align: center;
+        ">
+            <h1 style="
+                color: rgb(255, 187, 0);
+                font-size: 4em;
+                text-shadow: 0 .5rem .5rem rgba(0, 0, 0);
+                margin-bottom: 20px;
+                ">Space Invaders</h1>
+
+            <!-- button -->
+            <div id="startButton" style="cursor: pointer; position: relative; display: inline-block">
+                <img src="./img/button.png" alt="Start Button" />
+                <span style="
+              position: absolute;
+              color: white;
+              top: 50%;
+              transform: translate(-50%, -50%);
+              left: 50%;
+            ">Start</span>
+            </div>
+        </div>
+    </div>
+    <!-- restart screen -->
+    <!-- background container -->
+    <div id="restartScreen" style="
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: url('./img/startScreenBackground.png');
+        z-index: 20;
+        background-size: contain;
+        background-repeat: no-repeat;
+        display: none;
+        align-items: center;
+        justify-content: center;
+      ">
+        <div style="text-align: center">
+            <h1 style="color: white; font-size: 24px">Game Over</h1>
+            <h1 id="finalScore" style="color: white; margin: 0; font-size: 48px">
+                300
+            </h1>
+            <p style="color: white; margin-top: 0">Points</p>
+
+            <!-- button -->
+            <div id="restartButton" style="cursor: pointer; position: relative; display: inline-block">
+                <img src="./img/button.png" alt="Restart Button" />
+                <span style="
+              position: absolute;
+              color: white;
+              top: 50%;
+              transform: translate(-50%, -50%);
+              left: 50%;
+            ">Restart</span>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+        integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"
+        integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="./audio.js"></script>
+    <script src="./js/util.js"></script>
+    <script src="./js/classes/Player.js"></script>
+    <script src="./js/classes/Projectile.js"></script>
+    <script src="./js/classes/Particle.js"></script>
+    <script src="./js/classes/InvaderProjectile.js"></script>
+    <script src="./js/classes/Invader.js"></script>
+    <script src="./js/classes/Grid.js"></script>
+    <script src="./js/classes/Bomb.js"></script>
+    <script src="./index.js"></script>
+</div>
