--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <title>Space Invaders</title>
 <style>
-    body {
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-image: linear-gradient(grey, black);
-        font-family: sans-serif;
-        font-size: 14px;
-    }
+  body {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(grey, black);
+    font-family: sans-serif;
+    font-size: 14px;
+  }
 </style>
 
 <div style="position: relative" id="parentDiv">
-    <p id="scoreContainer" style="
+  <p id="scoreContainer" style="
         position: absolute;
         z-index: 10;
         color: yellow;
@@ -25,60 +25,73 @@
         margin: 0;
         display: none;
       ">
-        <span id="score">Score:</span> <span id="scoreEl">0</span>
-    </p>
-    <canvas></canvas>
-    <div style=" position: relative;
+    <span id="score">Score:</span> <span id="scoreEl">0</span>
+  </p>
+  <canvas></canvas>
+  <div style=" 
+            position: relative;
             z-index: 100;
             opacity: .4;">
-        <div id=" left" onclick="move()" style="
+    <div id=" left" onclick="move()" style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
             left: 20;
             ">
-            <img src="./img/button.png" alt="Restart Button" />
-            <span style="
-              position: absolute;
-              color: white;
-              top: 50%;
-              transform: translate(-50%, -50%);
-              left: 50%;
+      <button style="
+            background:transparent;
+            border:none;">
+        <img src="./img/button.png" alt="Left Button" />
+        <span style="
+            position: absolute;
+            color: white;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            left: 50%;
             ">LEFT</span>
-        </div>
-        <div id="right" onclick="move()" style="
+      </button>
+    </div>
+    <div id="right" onclick="move()" style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
             left: 140;
             ">
-            <img src="./img/button.png" alt="Restart Button" />
-            <span style="
-              position: absolute;
-              color: white;
-              top: 50%;
-              transform: translate(-50%, -50%);
-              left: 50%;
+      <button style="
+            background:transparent;
+            border:none;">
+        <img src="./img/button.png" alt="Right Button" />
+        <span style="
+            position: absolute;
+            color: white;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            left: 50%;
             ">RIGHT</span>
-        </div>
-        <div id="fire" onclick="shoot()" style="
+      </button>
+    </div>
+    <div id="fire" onclick="shoot()" style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
             right: 20;
             ">
-            <img src="./img/button.png" alt="Restart Button" />
-            <span style="
-              position: absolute;
-              color: white;
-              top: 50%;
-              transform: translate(-50%, -50%);
-              left: 50%;
+      <button style="
+            background:transparent;
+            border:none;">>
+        <img src="./img/button.png" alt="Shoot Button" />
+        <span style="
+            position: absolute;
+            color: white;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            left: 50%;
             ">FIRE</span>
-        </div>
+      </button>
     </div>
-    <!-- background container -->
-    <div id="startScreen" style="
+  </div>
+  <!-- background container -->
+  <div id="startScreen" style="
         position: absolute;
         top: 20;
         right: 0;
@@ -92,32 +105,32 @@
         align-items: center;
         justify-content: center;
       ">
-        <div style="
+    <div style="
         text-align: center;
         ">
-            <h1 style="
+      <h1 style="
                 color: rgb(255, 187, 0);
                 font-size: 4em;
                 text-shadow: 0 .5rem .5rem rgba(0, 0, 0);
                 margin-bottom: 60px;
                 ">Space Invaders</h1>
 
-            <!-- button -->
-            <div id="startButton" style="cursor: pointer; position: relative; display: inline-block">
-                <img src="./img/button.png" alt="Start Button" />
-                <span style="
+      <!-- button -->
+      <div id="startButton" style="cursor: pointer; position: relative; display: inline-block">
+        <img src="./img/button.png" alt="Start Button" />
+        <span style="
               position: absolute;
               color: white;
               top: 50%;
               transform: translate(-50%, -50%);
               left: 50%;
             ">Start</span>
-            </div>
-        </div>
+      </div>
     </div>
-    <!-- restart screen -->
-    <!-- background container -->
-    <div id="restartScreen" style="
+  </div>
+  <!-- restart screen -->
+  <!-- background container -->
+  <div id="restartScreen" style="
         position: absolute;
         top: 30;
         right: 0;
@@ -131,58 +144,58 @@
         align-items: center;
         justify-content: center;
       ">
-        <div style="
+    <div style="
         text-align: center">
-            <h1 style="
+      <h1 style="
             color: red; 
             font-size: 4em;
             margin-bottom: 20;
             text-shadow: 0 .5rem .5rem rgba(0, 0, 0);
             ">Game Over</h1>
-            <h1 id="finalScore" style="
+      <h1 id="finalScore" style="
             color: yellow;
             text-shadow: 0 .5rem .5rem rgba(0, 0, 0);
             margin: 0; 
             font-size: 48px">
-            </h1>
-            <p style="
+      </h1>
+      <p style="
             color: white;
              margin-top: 0;
              margin-bottom: 20;
              ">Points</p>
 
-            <!-- buttons -->
-            <div id="restartButton" style="
+      <!-- buttons -->
+      <div id="restartButton" style="
             cursor: pointer; 
             position: relative;
             display: inline-block
             ">
-                <img src="./img/button.png" alt="Restart Button" />
-                <span style="
+        <img src="./img/button.png" alt="Restart Button" />
+        <span style="
               position: absolute;
               color: white;
               top: 50%;
               transform: translate(-50%, -50%);
               left: 50%;
             ">Restart</span>
-            </div>
-        </div>
+      </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
-        integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"
-        integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+    integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"
+    integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="./audio.js"></script>
-    <script src="./js/util.js"></script>
-    <script src="./js/classes/Player.js"></script>
-    <script src="./js/classes/Projectile.js"></script>
-    <script src="./js/classes/Particle.js"></script>
-    <script src="./js/classes/InvaderProjectile.js"></script>
-    <script src="./js/classes/Invader.js"></script>
-    <script src="./js/classes/Grid.js"></script>
-    <script src="./js/classes/Bomb.js"></script>
-    <script src="./index.js"></script>
+  <script src="./audio.js"></script>
+  <script src="./js/util.js"></script>
+  <script src="./js/classes/Player.js"></script>
+  <script src="./js/classes/Projectile.js"></script>
+  <script src="./js/classes/Particle.js"></script>
+  <script src="./js/classes/InvaderProjectile.js"></script>
+  <script src="./js/classes/Invader.js"></script>
+  <script src="./js/classes/Grid.js"></script>
+  <script src="./js/classes/Bomb.js"></script>
+  <script src="./index.js"></script>
 </div>
