added mobile functionality

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             position: relative;
             z-index: 100;
             opacity: .4;">
-    <div id=" left" onclick="move()" style="
+    <div id="moveLeft" style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
@@ -51,7 +51,7 @@
             ">LEFT</span>
       </button>
     </div>
-    <div id="right" onclick="move()" style="
+    <div id="moveRight" style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
@@ -70,7 +70,7 @@
             ">RIGHT</span>
       </button>
     </div>
-    <div id="fire" onclick="shoot()" style="
+    <div id="fire" style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
