completed mobile controls

--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
             position: relative;
             z-index: 100;
             opacity: .4;">
-    <div id="moveLeft" style="
+    <div style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
-            left: 20;
+            left: 10;
             ">
-      <button style="
+      <button id="moveLeft" style="
+      padding: 10px;
             background:transparent;
             border:none;">
         <img src="./img/button.png" alt="Left Button" />
@@ -51,13 +52,14 @@
             ">LEFT</span>
       </button>
     </div>
-    <div id="moveRight" style="
+    <div style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
-            left: 140;
+            left: 150;
             ">
-      <button style="
+      <button id="moveRight" style="
+      padding: 10px;
             background:transparent;
             border:none;">
         <img src="./img/button.png" alt="Right Button" />
@@ -70,13 +72,14 @@
             ">RIGHT</span>
       </button>
     </div>
-    <div id="fire" style="
+    <div style="
             cursor: pointer; 
             position: absolute;
             bottom: 10;
             right: 20;
             ">
-      <button style="
+      <button id="fire" style="
+      padding: 10px;
             background:transparent;
             border:none;">>
         <img src="./img/button.png" alt="Shoot Button" />
