added extra padding to fire button to avoid click events on mobile

--- a/index.html
+++ b/index.html
@@ -75,15 +75,21 @@
     <div style="
             cursor: pointer; 
             position: absolute;
-            bottom: 10;
+            bottom: 20;
             right: 10;
             ">
       <button id="fire" style="
-      padding: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+            padding-left: 50px;
+            padding-top: 50px;
+            padding-right: 50px;
             background:transparent;
             border:none;">>
         <img src="./img/button.png" alt="Shoot Button" />
         <span style="
+        padding-top: 50px;
             position: absolute;
             color: white;
             top: 50%;
