--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     background-image: linear-gradient(grey, black);
     font-family: sans-serif;
     font-size: 14px;
+    touch-action: none;
   }
 </style>
 
@@ -28,76 +29,79 @@
     <span id="score">Score:</span> <span id="scoreEl">0</span>
   </p>
   <canvas></canvas>
+  <div style="
+        cursor: pointer; 
+        position: absolute;
+        bottom: 20;
+        right: -30;
+      ">
+    <button id="fire" style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 50px;
+        padding-top: 50px;
+        padding-right: 50px;
+        background:transparent;
+        border:none;">>
+      <img src="./img/button.png" alt="Shoot Button" />
+      <span style="
+        padding-top: 50px;
+        position: absolute;
+        color: white;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        left: 50%;
+      ">FIRE</span>
+    </button>
+  </div>
+
   <div style=" 
-            position: relative;
-            z-index: 100;
-            opacity: .4;">
+        position: relative;
+        z-index: 100;
+        opacity: .4;">
     <div style="
-            cursor: pointer; 
-            position: absolute;
-            bottom: 10;
-            left: 10;
-            ">
+        cursor: pointer; 
+        position: absolute;
+        bottom: 10;
+        left: 10;
+      ">
       <button id="moveLeft" style="
-      padding: 10px;
-            background:transparent;
-            border:none;">
+        padding: 10px;
+        background:transparent;
+        border:none;">
         <img src="./img/button.png" alt="Left Button" />
         <span style="
-            position: absolute;
-            color: white;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            left: 50%;
-            ">LEFT</span>
+        position: absolute;
+        color: white;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        left: 50%;
+      ">LEFT</span>
       </button>
     </div>
+
     <div style="
-            cursor: pointer; 
-            position: absolute;
-            bottom: 10;
-            left: 150;
-            ">
+        cursor: pointer; 
+        position: absolute;
+        bottom: 10;
+        left: 150;
+        ">
       <button id="moveRight" style="
-      padding: 10px;
-            background:transparent;
-            border:none;">
+        padding: 10px;
+        background:transparent;
+        border:none;">
         <img src="./img/button.png" alt="Right Button" />
         <span style="
-            position: absolute;
-            color: white;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            left: 50%;
-            ">RIGHT</span>
+        position: absolute;
+        color: white;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        left: 50%;
+      ">RIGHT</span>
       </button>
     </div>
-    <div style="
-            cursor: pointer; 
-            position: absolute;
-            bottom: 20;
-            right: 10;
-            ">
-      <button id="fire" style="
-      display: flex;
-      justify-content: center;
-      align-items: center;
-            padding-left: 50px;
-            padding-top: 50px;
-            padding-right: 50px;
-            background:transparent;
-            border:none;">>
-        <img src="./img/button.png" alt="Shoot Button" />
-        <span style="
-        padding-top: 50px;
-            position: absolute;
-            color: white;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            left: 50%;
-            ">FIRE</span>
-      </button>
-    </div>
+
   </div>
   <!-- background container -->
   <div id="startScreen" style="
