--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     background-image: linear-gradient(grey, black);
     font-family: sans-serif;
     font-size: 14px;
-    touch-action: none;
   }
 </style>
 
@@ -33,20 +32,22 @@
         cursor: pointer; 
         position: absolute;
         bottom: 20;
-        right: -30;
+        right: -130;
       ">
     <button id="fire" style="
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-left: 50px;
-        padding-top: 50px;
-        padding-right: 50px;
+        padding-left: 80px;
+        padding-top: 80px;
+        padding-right: 150px;
         background:transparent;
-        border:none;">>
+        border:none;">
       <img src="./img/button.png" alt="Shoot Button" />
       <span style="
-        padding-top: 50px;
+        padding-left: 30px;
+        padding-top: 80px;
+        padding-right: 100px;
         position: absolute;
         color: white;
         top: 50%;
