changed fire button opacity aand added more padding-botton to avoidtouch events

--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
   <div style="
         cursor: pointer; 
         position: absolute;
-        bottom: 20;
+        opacity: .4;
+        bottom: 0;
         right: -130;
       ">
     <button id="fire" style="
-        display: flex;
-        justify-content: center;
-        align-items: center;
         padding-left: 80px;
         padding-top: 80px;
         padding-right: 150px;
+        padding-bottom: 10px;
         background:transparent;
         border:none;">
       <img src="./img/button.png" alt="Shoot Button" />
@@ -48,6 +47,7 @@
         padding-left: 30px;
         padding-top: 80px;
         padding-right: 100px;
+        padding-bottom: 10px;
         position: absolute;
         color: white;
         top: 50%;
@@ -64,7 +64,7 @@
     <div style="
         cursor: pointer; 
         position: absolute;
-        bottom: 10;
+        bottom: 0;
         left: 10;
       ">
       <button id="moveLeft" style="
@@ -85,7 +85,7 @@
     <div style="
         cursor: pointer; 
         position: absolute;
-        bottom: 10;
+        bottom: 0;
         left: 150;
         ">
       <button id="moveRight" style="
