--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             cursor: pointer; 
             position: absolute;
             bottom: 20;
-            right: -80;
+            right: -70;
             ">
       <button id="fire" style="
             display: flex;
@@ -84,13 +84,13 @@
             align-items: center;
             padding-left: 80px;
             padding-top: 80px;
-            padding-right: 100px;
+            padding-right: 90px;
             background:transparent;
             border:none;">>
         <img src="./img/button.png" alt="Shoot Button" />
         <span style="
             padding-top: 80px;
-            padding-right: 10px;
+            padding-left: 0px;
             position: absolute;
             color: white;
             top: 50%;
