added vtouch-action pan-y for mobile screens

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     background-image: linear-gradient(grey, black);
     font-family: sans-serif;
     font-size: 14px;
+    touch-action: pan-y;
   }
 </style>
 
