--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             cursor: pointer; 
             position: absolute;
             bottom: 20;
-            right: -70;
+            right: -40;
             ">
       <button id="fire" style="
             display: flex;
@@ -85,13 +85,13 @@
             align-items: center;
             padding-left: 80px;
             padding-top: 80px;
-            padding-right: 90px;
+            padding-right: 60px;
             background:transparent;
-            border:none;">>
+            border:none;">
         <img src="./img/button.png" alt="Shoot Button" />
         <span style="
             padding-top: 80px;
-            padding-left: 0px;
+            padding-left: 20px;
             position: absolute;
             color: white;
             top: 50%;
