--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     background-image: linear-gradient(grey, black);
     font-family: sans-serif;
     font-size: 14px;
-    touch-action: pan-y;
+    touch-action: pan-y, pinch-zoom;
   }
 </style>
 
@@ -77,7 +77,7 @@
             cursor: pointer; 
             position: absolute;
             bottom: 20;
-            right: -40;
+            right: 0;
             ">
       <button id="fire" style="
             display: flex;
@@ -85,13 +85,13 @@
             align-items: center;
             padding-left: 80px;
             padding-top: 80px;
-            padding-right: 60px;
+            padding-right: 20px;
             background:transparent;
             border:none;">
         <img src="./img/button.png" alt="Shoot Button" />
         <span style="
             padding-top: 80px;
-            padding-left: 20px;
+            padding-left: 60px;
             position: absolute;
             color: white;
             top: 50%;
