remove space under buttons, remove buttons from start and restart screen and move player up 10px

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     background-image: linear-gradient(grey, black);
     font-family: sans-serif;
     font-size: 14px;
-    touch-action: pan-y, pinch-zoom;
+    touch-action: pan-y;
   }
 </style>
 
@@ -29,23 +29,25 @@
     <span id="score">Score:</span> <span id="scoreEl">0</span>
   </p>
   <canvas></canvas>
-  <div style=" 
+  <div id="button-div" style=" 
             position: relative;
             z-index: 100;
             opacity: .4;">
     <div style="
             cursor: pointer; 
             position: absolute;
-            bottom: 10;
+            bottom: 0;
             left: 10;
             ">
       <button id="moveLeft" style="
             padding: 10px;
+            padding-bottom: 30px;
             background:transparent;
             border:none;">
         <img src="./img/button.png" alt="Left Button" />
         <span style="
             position: absolute;
+            padding-bottom: 20px;
             color: white;
             top: 50%;
             transform: translate(-50%, -50%);
@@ -56,16 +58,18 @@
     <div style="
             cursor: pointer; 
             position: absolute;
-            bottom: 10;
+            bottom: 0;
             left: 150;
             ">
       <button id="moveRight" style="
             padding: 10px;
+            padding-bottom: 30px;
             background:transparent;
             border:none;">
         <img src="./img/button.png" alt="Right Button" />
         <span style="
             position: absolute;
+            padding-bottom: 20px;
             color: white;
             top: 50%;
             transform: translate(-50%, -50%);
@@ -76,22 +80,21 @@
     <div style="
             cursor: pointer; 
             position: absolute;
-            bottom: 20;
+            bottom: 0;
             right: 0;
             ">
       <button id="fire" style="
-            display: flex;
-            justify-content: center;
-            align-items: center;
             padding-left: 80px;
             padding-top: 80px;
             padding-right: 20px;
+            padding-bottom: 30px;
             background:transparent;
             border:none;">
         <img src="./img/button.png" alt="Shoot Button" />
         <span style="
             padding-top: 80px;
             padding-left: 60px;
+            padding-bottom: 30px;
             position: absolute;
             color: white;
             top: 50%;
